[AHC-261] - Code review fixes.